# llm-bench-compare

./: README.md  pyproject.toml  requirements.txt
llm_bench_compare/: __init__.py  app.py  data_loader.py  filters.py
llm_bench_compare/data/: benchmarks.json  pricing.json
llm_bench_compare/static/: app.js  style.css
llm_bench_compare/templates/: index.html
tests/: test_data_loader.py  test_filters.py  test_routes.py
